Fix: Adicionado verificação na função para o sidebar - Style: Estilização do menu dropdwon mobile e desktop

--- a/styles/single.css
+++ b/styles/single.css
@@ -215,6 +215,8 @@
         gap: 10px;
         align-items: center;
         justify-content: center;
+        max-height: 74px;
+        overflow: hidden;
     }
 
     .single__aside__content--icons span {
